--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -1,184 +1,379 @@
-name: PR
+name: Pull Request
 
 on:
   pull_request:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+env:
+  REGISTRY: ghcr.io
+  NAME: gfp
 
 jobs:
-  pr-greeting:
-    name: PR Greeting
+  check-backend:
+    name: Check Backend
+    outputs:
+      build: ${{ steps.check.outputs.build }}
     env:
-      DOMAIN: apps.silver.devops.gov.bc.ca
-      PREFIX: ${{ github.event.repository.name }}-${{ github.event.number }}
-    runs-on: ubuntu-22.04
-    permissions:
-      pull-requests: write
-    steps:
-      - name: PR Greeting
-        uses: bcgov-nr/action-pr-description-add@v0.0.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          add_markdown: |
-            ---
-            Thanks for the PR!
-            Any successful deployments (not always required) will be available below.
-            [Backend](https://${{ env.PREFIX }}-backend.${{ env.DOMAIN }}/) available
-            Once merged, code will be promoted and handed off to following workflow run.
-            [Main Merge Workflow](https://github.com/${{ github.repository }}/actions/workflows/merge-main.yml)
-
-  builds:
-    name: Builds
-    runs-on: ubuntu-22.04
-    permissions:
-      packages: write
-    strategy:
-      matrix:
-        package: [backend, database]
-        include:
-          - package: backend
-            triggers: ('backend/')
-          - package: database
-            triggers: ('database/')
-    steps:
-      - uses: actions/checkout@v3
-      - uses: bcgov-nr/action-builder-ghcr@v1.1.0
-        with:
-          package: ${{ matrix.package }}
-          tag: ${{ github.event.number }}
-          tag_fallback: test
-          token: ${{ secrets.GITHUB_TOKEN }}
-          triggers: ${{ matrix.triggers }}
-
-  deploys:
-    name: Deploys
-    needs:
-      - builds
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        name: [init, database, backend]
-        include:
-          - name: init
-            file: common/openshift.init.yml
-            overwrite: false
-          - name: database
-            file: database/openshift.deploy.yml
-            parameters: -p DB_PVC_SIZE=128Mi
-            overwrite: false
-          - name: backend
-            file: backend/openshift.deploy.yml
-            overwrite: true
-            parameters: -p MIN_REPLICAS=1 -p MAX_REPLICAS=2 -p BUILD=snapshot-${{ github.event.number }}
-    steps:
-      - uses: bcgov-nr/action-deployer-openshift@v1.0.2
-        with:
-          file: ${{ matrix.file }}
-          oc_namespace: ${{ secrets.OC_NAMESPACE }}
-          oc_server: ${{ secrets.OC_SERVER }}
-          oc_token: ${{ secrets.OC_TOKEN }}
-          overwrite: ${{ matrix.overwrite }}
-          penetration_test: false
-          verification_path: "actuator/health"
-          parameters:
-            -p ZONE=${{ github.event.number }} -p NAME=${{ github.event.repository.name }}
-            -p PROMOTE=${{ github.repository }}/${{ matrix.name }}:${{ github.event.number }}
-            ${{ matrix.parameters }}
-
-  pr-validation:
-    name: Label Validation (Only PR)
+      TRIGGERS: ('backend/')
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Check and process modified files
+        id: check
+        run: |
+          # Fetch main to diff against
+          git fetch origin main:refs/remotes/origin/master
+
+          # Trigger build if diff matches any triggers
+          TRIGGERS=${{ env.TRIGGERS }}
+          while read -r check
+          do
+              for t in "${TRIGGERS[@]}"; do
+                  if [[ "${check}" =~ "${t}" ]]
+                  then
+                      # Output build=true for next steps
+                      echo "::set-output name=build::true"
+                      echo -e "${t}\n --> ${check}\n"
+                      exit 0
+                  fi
+              done
+          done < <(git diff origin/main --name-only)
+          echo "Container build not required"
+
+      - name: Recycle/retag PROD Image
+        if: steps.check.outputs.build != 'true'
+        uses: shrink/actions-docker-registry-tag@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          repository: ${{ github.repository }}
+          target: prod-backend
+          tags: |
+            ${{ github.event.number }}-backend
+
+  check-frontend:
+    name: Check Frontend
+    outputs:
+      build: ${{ steps.check.outputs.build }}
+    env:
+      TRIGGERS: ('frontend/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Check and process modified files
+        id: check
+        run: |
+          # Fetch main to diff against
+          git fetch origin main:refs/remotes/origin/master
+
+          # Trigger build if diff matches any triggers
+          TRIGGERS=${{ env.TRIGGERS }}
+          while read -r check
+          do
+              for t in "${TRIGGERS[@]}"; do
+                  if [[ "${check}" =~ "${t}" ]]
+                  then
+                      # Output build=true for next steps
+                      echo "::set-output name=build::true"
+                      echo -e "${t}\n --> ${check}\n"
+                      exit 0
+                  fi
+              done
+          done < <(git diff origin/main --name-only)
+          echo "Container build not required"
+
+      - name: Recycle/retag PROD Image
+        if: steps.check.outputs.build != 'true'
+        uses: shrink/actions-docker-registry-tag@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          repository: ${{ github.repository }}
+          target: prod-frontend
+          tags: |
+            ${{ github.event.number }}-frontend
+
+  build-backend:
+    name: Backend Image Build
+    runs-on: ubuntu-latest
+    needs:
+      - check-backend
+    if: needs.check-backend.outputs.build == 'true'
     permissions:
       contents: read
-      pull-requests: write
+      packages: write
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Pull request size and stability labels
-        uses: actions/labeler@v4
-        continue-on-error: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
         with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-      - name: Conventional Label
-        uses: bcoe/conventional-release-labels@v1
-        continue-on-error: true
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ignored_types: '["chore","pr"]'
-          type_labels: '{"feat": "feature", "fix": "fix", "bug": "fix", "doc": "documentation", "ci": "ci", "chore": "chore", "breaking": "breaking", "BREAKING CHANGE": "breaking"}'
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Checkout branch
-        uses: actions/checkout@v3
+      - name: Build and push Backend Docker image
+        uses: docker/build-push-action@v2
         with:
-          ref: refs/heads/${{ github.head_ref }}
+          context: ./backend/
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-backend
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Conventional Changelog Update
-        continue-on-error: true
-        uses: TriPSs/conventional-changelog-action@v3
-        id: changelog
-        with:
-          github-token: ${{ github.token }}
-          output-file: "CHANGELOG.md"
-          skip-version-file: "true"
-          skip-commit: "true"
-          git-push: "false"
-          git-branch: refs/heads/${{ github.head_ref }}
-
-      - name: Checkout pr
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref }}
-
-      - name: Comment PR
-        continue-on-error: true
-        uses: thollander/actions-comment-pull-request@v2
-        if: ${{ steps.changelog.outputs.skipped == 'false' }}
-        with:
-          message: |
-            # Current changelog
-
-            ${{ steps.changelog.outputs.clean_changelog }}
-          comment_tag: current-changelog
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  api-tests:
-    name: Newman API tests runner
+  build-frontend:
+    name: Frontend Image Build
+    runs-on: ubuntu-latest
     needs:
-      - deploys
+      - check-frontend
+    if: needs.check-frontend.outputs.build == 'true'
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Backend Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend/
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-frontend
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  tests-backend:
+    name: Backend Unit Tests
+    runs-on: ubuntu-latest
+    needs:
+      - check-backend
+    if: needs.check-backend.outputs.build == 'true'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Get npm cache directory
+        id: npm-cache-dir-backend
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v3
+        id: npm-cache-backend # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.npm-cache-dir-backend.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Cache for test results
+        id: cache-backend
+        uses: actions/cache@v3
+        with:
+          path: backend/coverage
+          key: backend-coverage-${{ github.run_number }}
+          restore-keys: |
+            backend-coverage-
+
+      - name: Tests
+        run: |
+          cd backend
+          npm ci
+          npm run test:cov
+
+      - name: Report code coverage
+        uses: romeovs/lcov-reporter-action@v0.3.1
+        with:
+          title: Backend coverage report
+          delete-old-comments: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          lcov-file: ./backend/coverage/lcov.info
+
+  tests-frontend:
+    name: Frontend Unit Tests
+    runs-on: ubuntu-latest
+    needs:
+      - check-frontend
+    if: needs.check-frontend.outputs.build == 'true'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Get npm cache directory
+        id: npm-cache-dir-frontend
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+
+      - uses: actions/cache@v3
+        id: npm-cache-frontend # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.npm-cache-dir-frontend.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Cache for test results
+        id: cache-frontend
+        uses: actions/cache@v3
+        with:
+          path: frontend/coverage
+          key: frontend-coverage-${{ github.run_number }}
+          restore-keys: |
+            frontend-coverage-
+
+      - name: Tests
+        run: |
+          cd frontend
+          npm ci
+          npm run test:cov
+
+      - name: Report code coverage
+        uses: romeovs/lcov-reporter-action@v0.3.1
+        with:
+          title: Frontend coverage report
+          delete-old-comments: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          lcov-file: ./frontend/coverage/lcov.info
+
+  sonarcloud:
+    name: Static Analysis
+    needs:
+      - build-backend
+      - build-frontend
+      - tests-backend
+      - tests-frontend
+    if: always() && (needs.build-backend.result == 'success' || needs.build-frontend.result == 'success')
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install Node
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+        # Disable shallow clone for SonarCloud analysis
         with:
-          node-version: 16
+          fetch-depth: 0
 
-      - name: Install newman
-        run: |
-          npm install -g newman
-          npm install -g newman-reporter-htmlextra
-
-      - name: Make Directory for Test Results
-        run: mkdir -p testArtifacts
-
-      - name: Run Postman Collection
-        run: |
-          newman run test/postman/starting-api.postman_collection.json -e test/postman/starting-api.postman_environment.json \
-            --env-var "apiAddr=nr-spar-backend-${{ github.event.number }}-spar-api.apps.silver.devops.gov.bc.ca" \
-            --env-var "releaseVer=snapshot-${{ github.event.number }}" \
-            --env-var "authServer=${{ secrets.KEYCLOAK_SERVER_REALM }}" \
-            --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_NAME }}" \
-            --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_PASS }}" \
-            --suppress-exit-code -r htmlextra --reporter-htmlextra-export testArtifacts/api-tests-report.html
-
-      - name: Output the results
-        uses: actions/upload-artifact@v3
+      - name: Cache for backend test results
+        id: cache-backend
+        uses: actions/cache@v3
         with:
-          name: API test report
-          path: testArtifacts
+          path: backend/coverage
+          key: backend-coverage-${{ github.run_number }}
+          restore-keys: |
+            backend-coverage-
+
+      - name: Cache for frontend test results
+        id: cache-frontend
+        uses: actions/cache@v3
+        with:
+          path: frontend/coverage
+          key: frontend-coverage-${{ github.run_number }}
+          restore-keys: |
+            frontend-coverage-
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.exclusions=**/test/**,.github/**/*
+            -Dsonar.organization=bcgov-sonarcloud
+            -Dsonar.javascript.lcov.reportPaths=backend/coverage/lcov.info,frontend/coverage/lcov.info
+            -Dsonar.cobertura.reportPaths=backend/coverage/cobertura-coverage.xml,frontend/coverage/cobertura-coverage.xml
+            -Dsonar.project.monorepo.enabled=true
+            -Dsonar.projectKey=greenfield-template
+            -Dsonar.sources=backend,frontend
+            -Dsonar.tests=backend/test,frontend/test
+
+  deploy-dev:
+    name: DEV Deployment
+    needs:
+      - build-backend
+      - build-frontend
+      - tests-backend
+      - tests-frontend
+    if: always() && (needs.build-backend.result == 'success' || needs.build-frontend.result == 'success')
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    env:
+      ZONE: ${{ github.event.number }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Deploy
+        run: |
+          # Login to OpenShift and select project
+          oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
+          oc project ${{ secrets.OC_NAMESPACE }}
+
+          # Database uses a default build
+          oc process -f .github/openshift/deploy.database.yml -p ZONE=${{ env.ZONE }} | oc apply -f -
+
+          # Clean previous image, if rebuilding
+          if [ ${{ needs.build-backend.outputs.build == 'true' }} ]
+          then
+            # Clear stale images for import/replacement
+            oc delete is ${{ env.NAME }}-${{ env.ZONE }}-backend || \
+              echo "No previously imported images have been found"
+          fi
+
+          # Process and apply template
+          oc process -f .github/openshift/deploy.backend.yml -p ZONE=${{ env.ZONE }} \
+            -p PROMOTE=${{ github.repository }}:${{ env.ZONE }}-backend | oc apply -f -
+
+          # Clean previous image, if rebuilding
+          if [ ${{ needs.build-backend.outputs.build == 'true' }} ]
+          then
+            # Clear stale images for import/replacement
+            oc delete is ${{ env.NAME }}-${{ env.ZONE }}-frontend || \
+              echo "No previously imported images have been found"
+          fi
+
+          # Process and apply template
+          oc process -f .github/openshift/deploy.frontend.yml -p ZONE=${{ env.ZONE }} \
+            -p PROMOTE=${{ github.repository }}:${{ env.ZONE }}-frontend | oc apply -f -
+
+          # Follow any active rollouts (see deploymentconfigs)
+          oc rollout status dc/${{ env.NAME }}-${{ env.ZONE }}-database -w
+          oc rollout status dc/${{ env.NAME }}-${{ env.ZONE }}-backend -w
+          oc rollout status dc/${{ env.NAME }}-${{ env.ZONE }}-frontend -w
+
+      - name: DEV Deployment update
+        uses: mshick/add-pr-comment@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          allow-repeats: false
+          message: |
+            DEV deployments have completed successfully!
+
+            Backend: [https://${{ env.NAME }}-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca/]()
+            Frontend: [https://${{ env.NAME }}-${{ github.event.number }}-frontend.apps.silver.devops.gov.bc.ca/]()
