--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -51,49 +51,6 @@ jobs:
           tags: |
             ${{ github.event.number }}-backend
 
-  check-frontend:
-    name: Check Frontend
-    outputs:
-      build: ${{ steps.check.outputs.build }}
-    env:
-      TRIGGERS: ('frontend/')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Check and process modified files
-        id: check
-        run: |
-          # Fetch main to diff against
-          git fetch origin main:refs/remotes/origin/master
-
-          # Trigger build if diff matches any triggers
-          TRIGGERS=${{ env.TRIGGERS }}
-          while read -r check
-          do
-              for t in "${TRIGGERS[@]}"; do
-                  if [[ "${check}" =~ "${t}" ]]
-                  then
-                      # Output build=true for next steps
-                      echo "::set-output name=build::true"
-                      echo -e "${t}\n --> ${check}\n"
-                      exit 0
-                  fi
-              done
-          done < <(git diff origin/main --name-only)
-          echo "Container build not required"
-
-      - name: Recycle/retag PROD Image
-        if: steps.check.outputs.build != 'true'
-        uses: shrink/actions-docker-registry-tag@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          repository: ${{ github.repository }}
-          target: prod-frontend
-          tags: |
-            ${{ github.event.number }}-frontend
-
   build-backend:
     name: Backend Image Build
     runs-on: ubuntu-latest
@@ -128,49 +85,9 @@ jobs:
       - name: Build and push Backend Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./backend/
+          context: ./
           push: true
           tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-backend
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  build-frontend:
-    name: Frontend Image Build
-    runs-on: ubuntu-latest
-    needs:
-      - check-frontend
-    if: needs.check-frontend.outputs.build == 'true'
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Backend Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./frontend/
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-frontend
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -218,52 +135,6 @@ jobs:
           delete-old-comments: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           lcov-file: ./backend/coverage/lcov.info
-
-  tests-frontend:
-    name: Frontend Unit Tests
-    runs-on: ubuntu-latest
-    needs:
-      - check-frontend
-    if: needs.check-frontend.outputs.build == 'true'
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Get npm cache directory
-        id: npm-cache-dir-frontend
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-
-      - uses: actions/cache@v3
-        id: npm-cache-frontend # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
-        with:
-          path: ${{ steps.npm-cache-dir-frontend.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Cache for test results
-        id: cache-frontend
-        uses: actions/cache@v3
-        with:
-          path: frontend/coverage
-          key: frontend-coverage-${{ github.run_number }}
-          restore-keys: |
-            frontend-coverage-
-
-      - name: Tests
-        run: |
-          cd frontend
-          npm ci
-          npm run test:cov
-
-      - name: Report code coverage
-        uses: romeovs/lcov-reporter-action@v0.3.1
-        with:
-          title: Frontend coverage report
-          delete-old-comments: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          lcov-file: ./frontend/coverage/lcov.info
 
   sonarcloud:
     name: Static Analysis
@@ -318,9 +189,7 @@ jobs:
     name: DEV Deployment
     needs:
       - build-backend
-      - build-frontend
       - tests-backend
-      - tests-frontend
     if: always() && (needs.build-backend.result == 'success' || needs.build-frontend.result == 'success')
     runs-on: ubuntu-latest
     timeout-minutes: 15
