--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -219,12 +219,12 @@ jobs:
             pom.xml
             CHANGELOG.md
           commit-msg: "doc: updating pom to ${{ steps.changelog.outputs.version }} [ci skip]"
-          github-token: ${{ secrets.PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
