--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -1,14 +1,7 @@
-name: Commits and PR Open
+name: PR Open
 
 on:
   pull_request:
-  push:
-    branches:
-      - '*'
-      - '*/*'
-      - '**'
-    tags-ignore:
-      - '**'
 
 env:
   REGISTRY: ghcr.io
@@ -23,8 +16,65 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+  pr-validation:
+    name: Pull Request Label Validation
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Pull request size and stability labels
+        uses: actions/labeler@v4
+        continue-on-error: true
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Conventional Label
+        uses: bcoe/conventional-release-labels@v1
+        continue-on-error: true
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ignored_types: '["chore","pr"]'
+          type_labels: '{"feat": "feature", "fix": "fix", "bug": "fix", "doc": "documentation", "ci": "ci", "chore": "chore", "breaking": "breaking", "BREAKING CHANGE": "breaking"}'
+
+      - name: Checkout branch
+        uses: actions/checkout@v3
+        with:
+          ref: refs/heads/${{ github.head_ref }}
+
+      - name: Conventional Changelog Update
+        continue-on-error: true
+        uses: TriPSs/conventional-changelog-action@v3
+        id: changelog
+        with:
+          github-token: ${{ github.token }}
+          output-file: 'CHANGELOG.md'
+          skip-version-file: 'true'
+          skip-commit: 'true'
+          git-push: 'false'
+          git-branch: refs/heads/${{ github.head_ref }}
+
+      - name: Checkout pr
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Comment PR
+        continue-on-error: true
+        uses: thollander/actions-comment-pull-request@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        with:
+          message: |
+            # Current changelog
+
+            ${{ steps.changelog.outputs.clean_changelog }}
+          comment_includes: '# Current changelog'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   validate:
-    name: Validate Code
+    name: Code validation
     runs-on: ubuntu-latest
     needs:
       - cancel-prev-runs
@@ -174,7 +224,7 @@ jobs:
           args: --severity-threshold=high --sarif-file-output=snyk.sarif
 
   release:
-    name: Release
+    name: Release (When at main)
     runs-on: ubuntu-latest
     if: github.ref_name == 'main'
     needs:
@@ -230,7 +280,7 @@ jobs:
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
 
-  build-backend:
+  build-service-api:
     name: Backend Image Build
     env:
       COMPONENT: service-api
@@ -239,7 +289,6 @@ jobs:
     needs:
       - security
       - test
-    if: github.ref_name == 'main'
     permissions:
       contents: read
       packages: write
@@ -275,6 +324,7 @@ jobs:
           # Login to OpenShift and select project
           oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
           oc project ${{ secrets.OC_NAMESPACE }}
+
           # Clean previous image
           oc delete is ${{ env.NAME }}-${{ env.ZONE }}-${{ env.COMPONENT }} || true
 
@@ -283,8 +333,7 @@ jobs:
     needs:
       - security
       - test
-      - build-backend
-    if: github.ref_name == 'main'
+      - build-service-api
     runs-on: ubuntu-latest
     timeout-minutes: 15
     env:
@@ -296,15 +345,18 @@ jobs:
           # Login to OpenShift and select project
           oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
           oc project ${{ secrets.OC_NAMESPACE }}
+
           # Database uses a default build
           oc process -f .github/openshift/deploy.database.yml -p ZONE=${{ env.ZONE }} | oc apply -f -
+
           # Clean previous image, if rebuilding
-          if [ ${{ needs.build-backend.outputs.build == 'true' }} ]
+          if [ ${{ needs.build-service-api.outputs.build == 'true' }} ]
           then
             # Clear stale images for import/replacement
             oc delete is ${{ env.NAME }}-${{ env.ZONE }}-service-api || \
               echo "No previously imported images have been found"
           fi
+
           # Process and apply template
           oc process -f .github/openshift/deploy.backend.yml -p ZONE=${{ env.ZONE }} \
             -p PROMOTE=${{ github.repository }}:${{ env.ZONE }}-service-api | oc apply -f -
