--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -11,7 +11,12 @@ on:
       - "**.yaml"
 
 env:
+  REGISTRY: ghcr.io
   NAME: nrbestapi
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   # Clean up OpenShift when PR closed, no conditions
@@ -84,20 +89,61 @@ jobs:
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
 
-  # Promote images when PR merged and branch = main
-  promote-images:
-    name: Promote DEV images to TEST
-    runs-on: ubuntu-latest
+  # If merged, then handle any image promotion
+  image-backend:
+    name: Backend Image Promotion
+    outputs:
+      build: ${{ steps.check.outputs.build }}
+    env:
+      COMPONENT: backend
+      PREV: ${{ github.event.number }}
+      ZONE: test
+    environment:
+      name: test
+    runs-on: ubuntu-22.04
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     steps:
-      - name: Promote Image to TEST
+      - name: Check for image changes
+        id: check
+        run: |
+          # Vars
+          IMG_PREV="${{ env.REGISTRY }}/${{ github.repository }}:${{ env.PREV }}-${{ env.COMPONENT }}"
+          IMG_ZONE="${{ env.REGISTRY }}/${{ github.repository }}:${{ env.ZONE }}-${{ env.COMPONENT }}"
+          # Make sure an image exists to promote; grab SHA
+          if [[ ! $(docker pull "${IMG_PREV}") ]]; then
+              echo -e "\n No images to promote"
+              exit 0
+          fi
+          SHA_PREV=$(docker inspect -f '{{.Id}}' "${IMG_PREV}")
+          # Use blank SHA for promoted image, unless a real one exists instead
+          SHA_ZONE=""
+          if [[ $(docker pull "${IMG_ZONE}") ]]; then
+            SHA_ZONE=$(docker inspect -f '{{.Id}}' "${IMG_ZONE}")
+          fi
+          # Output SHAs
+          echo -e "\n${IMG_PREV}: ${SHA_PREV}"
+          echo -e "${IMG_ZONE}: ${SHA_ZONE}\n"
+          # If different, then trigger updates
+          if [[ "${SHA_PREV}" != "${SHA_ZONE}" ]]; then
+            echo "::set-output name=build::true"
+            echo "Image has changed"
+            # Login to OpenShift and select project
+            oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
+            oc project ${{ secrets.OC_NAMESPACE }}
+            oc delete is/${{ env.NAME }}-${{ env.ZONE}}-${{ env.COMPONENT }} || true
+            exit 0
+          fi
+          echo "Image promotion not required"
+
+      - name: Promote Service API Image
+        if: steps.check.outputs.build == 'true'
         uses: shrink/actions-docker-registry-tag@v2
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           repository: ${{ github.repository }}
-          target: ${{ github.event.number }}-service-api
+          target: ${{ env.PREV }}-${{ env.COMPONENT }}
           tags: |
-            test-service-api
+            ${{ env.ZONE }}-${{ env.COMPONENT }}
 
   # Notify when PR merged and branch = main
   merge-notification:
