--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -7,15 +7,11 @@ env:
   REGISTRY: ghcr.io
   NAME: nrbestapi
 
-jobs:
-  cancel-prev-runs:
-    name: Cancel Previous Runs
-    runs-on: ubuntu-latest
-    steps:
-      - uses: n1hility/cancel-previous-runs@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
+jobs:
   pr-validation:
     name: Pull Request Label Validation
     runs-on: ubuntu-latest
@@ -76,8 +72,6 @@ jobs:
   validate:
     name: Code validation
     runs-on: ubuntu-latest
-    needs:
-      - cancel-prev-runs
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v2
@@ -110,8 +104,8 @@ jobs:
           path: target/site/checkstyle.html
           retention-days: 5
 
-  test:
-    name: Test Code
+  sonarcloud:
+    name: Test Code and Static Analysis
     runs-on: ubuntu-latest
     needs:
       - validate
@@ -201,6 +195,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
+          debug: true
           languages: java
 
       - name: Set up JDK 17
@@ -231,7 +226,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - security
-      - test
+      - sonarcloud
     permissions:
       contents: read
       packages: write
@@ -275,7 +270,7 @@ jobs:
     name: DEV Deployment
     needs:
       - security
-      - test
+      - sonarcloud
       - build-service-api
     runs-on: ubuntu-latest
     timeout-minutes: 15
