Fix/merge main flow (#20)
* fix: ci workflows for pr close and merge main

* fix: new job names

* fix: remove database deployment for now

* fix: wrong yaml syntax

* fix: adjust if condition to run on pull requests

* ci: fix codeql into pull requests flow

* fix: removed database deploy config files

* fix: enable codeql to run in every commit

--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -1,14 +1,11 @@
-name: Pull Request Close
+name: PR Close
 
 on:
   pull_request:
     types:
       - closed
     paths-ignore:
-      - ".**"
       - "**.md"
-      - "**.yml"
-      - "**.yaml"
 
 env:
   REGISTRY: ghcr.io
